# cuda_image_examples

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  squared1D.cu
src/include/: common.hpp  squared1D.hpp
test/: CMakeLists.txt  squared1D.test.cpp
